# mcp-daily-news

./: .gitignore  CURSOR_MCP_SETUP.md  Makefile  PYPI_PUBLISH_GUIDE.md  README.md  example_config.json  pyproject.toml  pyproject.toml.bak  requirements.txt  start_mcp.py
src/mcp_daily_news/: main.py  types.py
src/mcp_daily_news/tools/: autohome.py  baidu.py  bbc.py  bilibili.py  custom_rss.py  douban.py  gcores.py  hupu.py  kuaishou.py  netease_news.py  smzdm.py  so360.py  sogou.py  tencent_news.py  thepaper.py  tieba.py  xiaohongshu.py  xueqiu.py  zhihu.py
src/mcp_daily_news/utils/: __init__.py  cache.py  helpers.py  logger.py
src/mcp_trends_hub/: __init__.py  __main__.py  main.py
src/mcp_trends_hub/tools/: 9to5mac.py  __init__.py  bilibili.py  douyin.py  ifanr.py  infoq.py  ithome.py  kr36.py  nytimes.py  sspai.py  theverge.py  toutiao.py  weibo.py  weread.py
src/mcp_trends_hub/utils/: cache.py  helpers.py  logger.py
