[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-daily-news"
version = "1.6.2"
description = "ðŸ”¥ åŸºäºŽ Model Context Protocol (MCP) åè®®çš„å…¨ç½‘çƒ­ç‚¹è¶‹åŠ¿ä¸€ç«™å¼èšåˆæœåŠ¡"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "sunjackson"},
]
keywords = ["mcp", "daily", "news"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.7.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
mcp-daily-news = "mcp_daily_news.main:main_sync"

[project.urls]
Homepage = "https://github.com/sunjackson/mcp-daily-news"
Repository = "https://github.com/sunjackson/mcp-daily-news.git"
Issues = "https://github.com/sunjackson/mcp-daily-news/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true 